dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-stream-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Optional in newer versions if ingressClassName is used
spec:
  ingressClassName: nginx  # Preferred way in newer K8s versions
  rules:
    - host: dl.andrestrek.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: file-stream-app-service
                port:
                  number: 80
